# gpu_canny_edge_detection

./: Makefile.in  README.md  configure.ac
src/: Makefile.in  edge.cpp
